// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestedComponent is Coin and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Coin-lmzeq1-0",
        "isStatic": true,
        "rules": Array [
          "display:inline-block;height:16px;margin-bottom:32px;margin-right:32px;position:relative;transform-origin:top left;transform:scale(3);width:16px;&::before{position:absolute;top:-1px;left:-1px;display:block;content:'';background:0 0;width:1px;height:1px;color:",
          "#ffc107",
          ";box-shadow:6px 1px ",
          "#060606",
          ",7px 1px ",
          "#060606",
          ",8px 1px ",
          "#060606",
          ",9px 1px ",
          "#060606",
          ",10px 1px ",
          "#060606",
          ",11px 1px ",
          "#060606",
          ",4px 2px ",
          "#060606",
          ",5px 2px ",
          "#060606",
          ",6px 2px ",
          "#060606",
          ",7px 2px ",
          "#fff",
          ",8px 2px ",
          "#fff",
          ",9px 2px ",
          "#fff",
          ",10px 2px ",
          "#060606",
          ",11px 2px ",
          "#060606",
          ",12px 2px ",
          "#060606",
          ",13px 2px ",
          "#060606",
          ",3px 3px ",
          "#060606",
          ",4px 3px ",
          "#060606",
          ",5px 3px ",
          "#fff",
          ",6px 3px ",
          "#fff",
          ",7px 3px,8px 3px,9px 3px,10px 3px,11px 3px,12px 3px ",
          "#060606",
          ",13px 3px ",
          "#060606",
          ",3px 4px ",
          "#060606",
          ",4px 4px ",
          "#fff",
          ",5px 4px,6px 4px,7px 4px ",
          "#fff",
          ",8px 4px ",
          "#fff",
          ",9px 4px ",
          "#fff",
          ",10px 4px ",
          "#060606",
          ",11px 4px,12px 4px,13px 4px ",
          "#060606",
          ",14px 4px ",
          "#060606",
          ",2px 5px ",
          "#060606",
          ",3px 5px ",
          "#060606",
          ",4px 5px ",
          "#fff",
          ",5px 5px,6px 5px,7px 5px ",
          "#fff",
          ",8px 5px,9px 5px,10px 5px ",
          "#060606",
          ",11px 5px,12px 5px,13px 5px ",
          "#060606",
          ",14px 5px ",
          "#060606",
          ",2px 6px ",
          "#060606",
          ",3px 6px ",
          "#fff",
          ",4px 6px,5px 6px,6px 6px,7px 6px ",
          "#fff",
          ",8px 6px,9px 6px,10px 6px ",
          "#060606",
          ",11px 6px,12px 6px,13px 6px,14px 6px ",
          "#060606",
          ",15px 6px ",
          "#060606",
          ",2px 7px ",
          "#060606",
          ",3px 7px ",
          "#fff",
          ",4px 7px,5px 7px,6px 7px,7px 7px ",
          "#fff",
          ",8px 7px,9px 7px,10px 7px ",
          "#060606",
          ",11px 7px,12px 7px,13px 7px,14px 7px ",
          "#060606",
          ",15px 7px ",
          "#060606",
          ",2px 8px ",
          "#060606",
          ",3px 8px ",
          "#fff",
          ",4px 8px,5px 8px,6px 8px,7px 8px ",
          "#fff",
          ",8px 8px,9px 8px,10px 8px ",
          "#060606",
          ",11px 8px,12px 8px,13px 8px,14px 8px ",
          "#060606",
          ",15px 8px ",
          "#060606",
          ",2px 9px ",
          "#060606",
          ",3px 9px ",
          "#fff",
          ",4px 9px,5px 9px,6px 9px,7px 9px ",
          "#fff",
          ",8px 9px,9px 9px,10px 9px ",
          "#060606",
          ",11px 9px,12px 9px,13px 9px,14px 9px ",
          "#060606",
          ",15px 9px ",
          "#060606",
          ",2px 10px ",
          "#060606",
          ",3px 10px ",
          "#fff",
          ",4px 10px,5px 10px,6px 10px,7px 10px ",
          "#fff",
          ",8px 10px,9px 10px,10px 10px ",
          "#060606",
          ",11px 10px,12px 10px,13px 10px,14px 10px ",
          "#060606",
          ",15px 10px ",
          "#060606",
          ",2px 11px ",
          "#060606",
          ",3px 11px ",
          "#fff",
          ",4px 11px,5px 11px,6px 11px,7px 11px ",
          "#fff",
          ",8px 11px,9px 11px,10px 11px ",
          "#060606",
          ",11px 11px,12px 11px,13px 11px,14px 11px ",
          "#060606",
          ",15px 11px ",
          "#060606",
          ",2px 12px ",
          "#060606",
          ",3px 12px ",
          "#060606",
          ",4px 12px ",
          "#fff",
          ",5px 12px,6px 12px,7px 12px ",
          "#fff",
          ",8px 12px,9px 12px,10px 12px ",
          "#060606",
          ",11px 12px,12px 12px,13px 12px ",
          "#060606",
          ",14px 12px ",
          "#060606",
          ",3px 13px ",
          "#060606",
          ",4px 13px ",
          "#fff",
          ",5px 13px,6px 13px,7px 13px ",
          "#fff",
          ",8px 13px ",
          "#060606",
          ",9px 13px ",
          "#060606",
          ",10px 13px ",
          "#060606",
          ",11px 13px,12px 13px,13px 13px ",
          "#060606",
          ",14px 13px ",
          "#060606",
          ",3px 14px ",
          "#060606",
          ",4px 14px ",
          "#060606",
          ",5px 14px ",
          "#fff",
          ",6px 14px,7px 14px,8px 14px,9px 14px,10px 14px,11px 14px,12px 14px ",
          "#060606",
          ",13px 14px ",
          "#060606",
          ",4px 15px ",
          "#060606",
          ",5px 15px ",
          "#060606",
          ",6px 15px ",
          "#060606",
          ",7px 15px,8px 15px,9px 15px,10px 15px ",
          "#060606",
          ",11px 15px ",
          "#060606",
          ",12px 15px ",
          "#060606",
          ",13px 15px ",
          "#060606",
          ",6px 16px ",
          "#060606",
          ",7px 16px ",
          "#060606",
          ",8px 16px ",
          "#060606",
          ",9px 16px ",
          "#060606",
          ",10px 16px ",
          "#060606",
          ",11px 16px ",
          "#060606",
          ";}",
        ],
      },
      "displayName": "Coin",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Coin-lmzeq1-0",
      "target": "i",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is DropdownItem and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "DropdownItem-pa8zp2-0",
        "isStatic": true,
        "rules": Array [
          "align-items:center;display:flex;height:",
          "1.5em",
          ";justify-content:center;margin:0;overflow:hidden;padding:0;text-align:center;text-decoration:none;text-overflow:ellipsis;text-transform:capitalize;white-space:nowrap;width:100%;",
        ],
      },
      "displayName": "DropdownItem",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "DropdownItem-pa8zp2-0",
      "target": "li",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is DropdownList and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "DropdownList-cryzk1-0",
        "isStatic": true,
        "rules": Array [
          "background-color:white;border:solid 2px;border-top:0;box-shadow:4px 0 ",
          "#212529",
          ",0 -4px ",
          "#212529",
          ",-4px 0 ",
          "#212529",
          ",0 4px ",
          "#212529",
          ";list-style:none;margin:0 4px;max-height:calc(6 * ",
          "1.5em",
          ");overflow-y:hidden;padding:0;position:absolute;top:0;width:calc(100% - 12px);",
        ],
      },
      "displayName": "DropdownList",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "DropdownList-cryzk1-0",
      "target": "ul",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is DropdownWrap and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "DropdownWrap-sc-7fme7b-0",
        "isStatic": true,
        "rules": Array [
          "position:relative;width:100%;z-index:1;",
        ],
      },
      "displayName": "DropdownWrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "DropdownWrap-sc-7fme7b-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is Earned and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Earned-sc-1bbg8n0-0",
        "isStatic": true,
        "rules": Array [
          "animation:",
          Keyframes {
            "id": "sc-keyframes-CBgXx",
            "inject": [Function],
            "name": "CBgXx",
            "rules": Array [
              "@-webkit-keyframes CBgXx{0%{opacity:0;-webkit-transform:rotateY(0) translateY(0);-ms-transform:rotateY(0) translateY(0);transform:rotateY(0) translateY(0);}100%{opacity:1;-webkit-transform:rotateY(1800deg) translateY(-100%);-ms-transform:rotateY(1800deg) translateY(-100%);transform:rotateY(1800deg) translateY(-100%);}}",
              "@keyframes CBgXx{0%{opacity:0;-webkit-transform:rotateY(0) translateY(0);-ms-transform:rotateY(0) translateY(0);transform:rotateY(0) translateY(0);}100%{opacity:1;-webkit-transform:rotateY(1800deg) translateY(-100%);-ms-transform:rotateY(1800deg) translateY(-100%);transform:rotateY(1800deg) translateY(-100%);}}",
            ],
            "toString": [Function],
          },
          " 1.4s ease-out forwards,",
          Keyframes {
            "id": "sc-keyframes-biVnR",
            "inject": [Function],
            "name": "biVnR",
            "rules": Array [
              "@-webkit-keyframes biVnR{70%{opacity:1;}100%{opacity:0;}}",
              "@keyframes biVnR{70%{opacity:1;}100%{opacity:0;}}",
            ],
            "toString": [Function],
          },
          " 2s ease-out forwards;position:absolute;",
        ],
      },
      "displayName": "Earned",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Earned-sc-1bbg8n0-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is ErrorBox and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "ErrorBox-xbxs9c-0",
        "isStatic": true,
        "rules": Array [
          "background-color:",
          "rgba(231, 110, 85, 0.5)",
          ";box-shadow:4px 0 ",
          "#e76e55",
          ",0 -4px ",
          "#e76e55",
          ",-4px 0 ",
          "#e76e55",
          ",0 4px ",
          "#e76e55",
          ";display:block;margin:0.5em 0;overflow-x:auto;padding:0.5em;white-space:pre-wrap;",
        ],
      },
      "displayName": "ErrorBox",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "ErrorBox-xbxs9c-0",
      "target": "pre",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is ErrorCode and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "ErrorCode-sc-1u9g8cu-0",
        "isStatic": true,
        "rules": Array [
          "color:",
          "#ce372b",
          ";font-family:",
          "'Press Start 2P', monospace",
          ";font-size:0.65em;font-weight:bold;",
        ],
      },
      "displayName": "ErrorCode",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "ErrorCode-sc-1u9g8cu-0",
      "target": "code",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is FormButtons and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "FormButtons-sc-1qte9os-0",
        "isStatic": true,
        "rules": Array [
          "display:flex;justify-content:space-between;",
        ],
      },
      "displayName": "FormButtons",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "FormButtons-sc-1qte9os-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is FormLineWrap and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "FormLineWrap-sc-118xyvq-0",
        "isStatic": true,
        "rules": Array [
          "display:flex;width:100%;",
        ],
      },
      "displayName": "FormLineWrap",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "FormLineWrap-sc-118xyvq-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is FormSection and matches snapshot 1`] = `
.c0 {
  display: none;
}

<FormSection
  active={false}
>
  <StyledComponent
    active={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "FormSection-sc-1etmryy-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:",
            [Function],
            ";",
          ],
        },
        "displayName": "FormSection",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "FormSection-sc-1etmryy-0",
        "target": "section",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <section
      className="c0"
    />
  </StyledComponent>
</FormSection>
`;

exports[`TestedComponent is FormSection and matches snapshot 2`] = `
.c0 {
  display: block;
}

<FormSection
  active={true}
>
  <StyledComponent
    active={true}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "FormSection-sc-1etmryy-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:",
            [Function],
            ";",
          ],
        },
        "displayName": "FormSection",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "FormSection-sc-1etmryy-0",
        "target": "section",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <section
      className="c0"
    />
  </StyledComponent>
</FormSection>
`;

exports[`TestedComponent is GitHubLink and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "GitHubLink-sc-19coigu-0",
        "isStatic": true,
        "rules": Array [
          "display:flex;justify-content:flex-end;height:4em;margin-right:95px;&::before{position:absolute;top:0;right:95px;content:'';background:0 0;width:6px;height:6px;color:#333;box-shadow:24px 6px,78px 6px,24px 12px,30px 12px,72px 12px,78px 12px,24px 18px,30px 18px,36px 18px,42px 18px,48px 18px,54px 18px,60px 18px,66px 18px,72px 18px,78px 18px,18px 24px,24px 24px,30px 24px,36px 24px,42px 24px,48px 24px,54px 24px,60px 24px,66px 24px,72px 24px,78px 24px,84px 24px,18px 30px,24px 30px,30px 30px,36px 30px,42px 30px,48px 30px,54px 30px,60px 30px,66px 30px,72px 30px,78px 30px,84px 30px,18px 36px,24px 36px,30px 36px,36px 36px #ffdec4,42px 36px #ffdec4,48px 36px #ffdec4,54px 36px #ffdec4,60px 36px #ffdec4,66px 36px #ffdec4,72px 36px,78px 36px,84px 36px,18px 42px,24px 42px,30px 42px #ffdec4,36px 42px #cb7066,42px 42px #ffdec4,48px 42px #ffdec4,54px 42px #ffdec4,60px 42px #ffdec4,66px 42px #cb7066,72px 42px #ffdec4,78px 42px,84px 42px,18px 48px,24px 48px,30px 48px #ffdec4,36px 48px #cb7066,42px 48px #ffdec4,48px 48px #ffdec4,54px 48px #ffdec4,60px 48px #ffdec4,66px 48px #cb7066,72px 48px #ffdec4,78px 48px,84px 48px,24px 54px,30px 54px,36px 54px #ffdec4,42px 54px #ffdec4,48px 54px #cb7066,54px 54px #cb7066,60px 54px #ffdec4,66px 54px #ffdec4,72px 54px,78px 54px,6px 60px,12px 60px,42px 60px,48px 60px,54px 60px,60px 60px,18px 66px,24px 66px,36px 66px,42px 66px,48px 66px,54px 66px,60px 66px,66px 66px,24px 72px,30px 72px,36px 72px,42px 72px,48px 72px,54px 72px,60px 72px,66px 72px,36px 78px,48px 78px,54px 78px,66px 78px,36px 84px,48px 84px,54px 84px,66px 84px,30px 90px,42px 90px,60px 90px,72px 90px;}",
        ],
      },
      "displayName": "GitHubLink",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "GitHubLink-sc-19coigu-0",
      "target": "a",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is Input and matches snapshot 1`] = `
.c0 {
  background-color: rgb(235,235,228);
  border: none;
  box-shadow: 0 4px #212529,0 -4px #212529,4px 0 #212529,-4px 0 #212529;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: "#e7e7e7";
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Input
  disabled={true}
>
  <StyledComponent
    disabled={true}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input-sc-1wcekai-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "background-color:",
            [Function],
            ";border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input-sc-1wcekai-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <input
      className="c0"
      disabled={true}
    />
  </StyledComponent>
</Input>
`;

exports[`TestedComponent is Input and matches snapshot 2`] = `
.c0 {
  background-color: white;
  border: none;
  box-shadow: 0 4px #e76e55,0 -4px #e76e55,4px 0 #e76e55,-4px 0 #e76e55;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #ce372b;
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Input
  status="error"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input-sc-1wcekai-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "background-color:",
            [Function],
            ";border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input-sc-1wcekai-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status="error"
  >
    <input
      className="c0"
    />
  </StyledComponent>
</Input>
`;

exports[`TestedComponent is Input and matches snapshot 3`] = `
.c0 {
  background-color: white;
  border: none;
  box-shadow: 0 4px #92cc41,0 -4px #92cc41,4px 0 #92cc41,-4px 0 #92cc41;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #76c442;
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Input
  status="success"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input-sc-1wcekai-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "background-color:",
            [Function],
            ";border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input-sc-1wcekai-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status="success"
  >
    <input
      className="c0"
    />
  </StyledComponent>
</Input>
`;

exports[`TestedComponent is Input and matches snapshot 4`] = `
.c0 {
  background-color: white;
  border: none;
  box-shadow: 0 4px #212529,0 -4px #212529,4px 0 #212529,-4px 0 #212529;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: "#e7e7e7";
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Input
  status={null}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Input-sc-1wcekai-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "background-color:",
            [Function],
            ";border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Input-sc-1wcekai-0",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status={null}
  >
    <input
      className="c0"
    />
  </StyledComponent>
</Input>
`;

exports[`TestedComponent is MessageBox and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "MessageBox-sc-1jj71pj-0",
        "isStatic": true,
        "rules": Array [
          "background-color:papayawhip;padding:1em;",
        ],
      },
      "displayName": "MessageBox",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "MessageBox-sc-1jj71pj-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is Modal and matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.4);
  display: none;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

<Modal
  open={false}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Modal-sc-1lxhdwr-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "align-items:center;background-color:rgba(0,0,0,0.4);display:",
            [Function],
            ";height:100%;justify-content:center;left:0;overflow:auto;position:fixed;top:0;width:100%;z-index:1;",
          ],
        },
        "displayName": "Modal",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Modal-sc-1lxhdwr-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    open={false}
  >
    <div
      className="c0"
      open={false}
    />
  </StyledComponent>
</Modal>
`;

exports[`TestedComponent is Modal and matches snapshot 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.4);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

<Modal
  open={true}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Modal-sc-1lxhdwr-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "align-items:center;background-color:rgba(0,0,0,0.4);display:",
            [Function],
            ";height:100%;justify-content:center;left:0;overflow:auto;position:fixed;top:0;width:100%;z-index:1;",
          ],
        },
        "displayName": "Modal",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Modal-sc-1lxhdwr-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    open={true}
  >
    <div
      className="c0"
      open={true}
    />
  </StyledComponent>
</Modal>
`;

exports[`TestedComponent is PageWrapper and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "PageWrapper-sc-1xhm07a-0",
        "isStatic": true,
        "rules": Array [
          "margin:auto;width:96vw;@media (min-width:",
          "768px",
          "){width:80vw;}",
        ],
      },
      "displayName": "PageWrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "PageWrapper-sc-1xhm07a-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is Score and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Score__FormButtons-sc-1y0zffo-0",
        "isStatic": true,
        "rules": Array [
          "display:flex;justify-content:flex-end;",
        ],
      },
      "displayName": "Score__FormButtons",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Score__FormButtons-sc-1y0zffo-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is Select and matches snapshot 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: rgb(235,235,228);
  border: none;
  box-shadow: 0 4px #212529,0 -4px #212529,4px 0 #212529,-4px 0 #212529;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: "#e7e7e7";
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

.c0::-ms-expand {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Select
  disabled={true}
>
  <StyledComponent
    disabled={true}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Select-ljf8xp-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "appearance:none;background-color:",
            [Function],
            ";::-ms-expand{display:none;}border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Select",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Select-ljf8xp-0",
        "target": "select",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <select
      className="c0"
      disabled={true}
    />
  </StyledComponent>
</Select>
`;

exports[`TestedComponent is Select and matches snapshot 2`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: white;
  border: none;
  box-shadow: 0 4px #e76e55,0 -4px #e76e55,4px 0 #e76e55,-4px 0 #e76e55;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #ce372b;
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

.c0::-ms-expand {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Select
  status="error"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Select-ljf8xp-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "appearance:none;background-color:",
            [Function],
            ";::-ms-expand{display:none;}border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Select",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Select-ljf8xp-0",
        "target": "select",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status="error"
  >
    <select
      className="c0"
    />
  </StyledComponent>
</Select>
`;

exports[`TestedComponent is Select and matches snapshot 3`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: white;
  border: none;
  box-shadow: 0 4px #92cc41,0 -4px #92cc41,4px 0 #92cc41,-4px 0 #92cc41;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: #76c442;
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

.c0::-ms-expand {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Select
  status="success"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Select-ljf8xp-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "appearance:none;background-color:",
            [Function],
            ";::-ms-expand{display:none;}border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Select",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Select-ljf8xp-0",
        "target": "select",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status="success"
  >
    <select
      className="c0"
    />
  </StyledComponent>
</Select>
`;

exports[`TestedComponent is Select and matches snapshot 4`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: white;
  border: none;
  box-shadow: 0 4px #212529,0 -4px #212529,4px 0 #212529,-4px 0 #212529;
  font-family: 'Press Start 2P',monospace;
  line-height: calc(2 * 1.5em);
  margin: 4px;
  outline-color: "#e7e7e7";
  padding: 0.5rem 1rem;
  text-transform: capitalize;
  width: 100%;
}

.c0::-ms-expand {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.5em;
  }
}

<Select
  status={null}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Select-ljf8xp-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "appearance:none;background-color:",
            [Function],
            ";::-ms-expand{display:none;}border:none;box-shadow:0 4px ",
            [Function],
            ",0 -4px ",
            [Function],
            ",4px 0 ",
            [Function],
            ",-4px 0 ",
            [Function],
            ";font-family:",
            "'Press Start 2P', monospace",
            ";line-height:calc(2 * ",
            "1.5em",
            ");margin:4px;outline-color:",
            [Function],
            ";padding:0.5rem 1rem;text-transform:capitalize;width:100%;@media (min-width:",
            "768px",
            "){font-size:",
            "1.5em",
            ";line-height:",
            "1.5em",
            ";}",
          ],
        },
        "displayName": "Select",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Select-ljf8xp-0",
        "target": "select",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    status={null}
  >
    <select
      className="c0"
    />
  </StyledComponent>
</Select>
`;

exports[`TestedComponent is SelectItem and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "SelectItem-sc-9uy8oq-0",
        "isStatic": true,
        "rules": Array [
          "align-items:center;display:flex;height:",
          "1.5em",
          ";justify-content:center;margin:0;overflow:hidden;padding:0;text-align:center;text-decoration:none;text-overflow:ellipsis;text-transform:capitalize;white-space:nowrap;width:100%;",
        ],
      },
      "displayName": "SelectItem",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "SelectItem-sc-9uy8oq-0",
      "target": "option",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is ThreeBlinking and matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "ThreeBlinking-sc-1k540pu-0",
        "isStatic": true,
        "rules": Array [
          "animation:",
          Keyframes {
            "id": "sc-keyframes-yGVCZ",
            "inject": [Function],
            "name": "yGVCZ",
            "rules": Array [
              "@-webkit-keyframes yGVCZ{0%{opacity:.2;}20%{opacity:1;}100%{opacity:.2;}}",
              "@keyframes yGVCZ{0%{opacity:.2;}20%{opacity:1;}100%{opacity:.2;}}",
            ],
            "toString": [Function],
          },
          " 1.4s linear infinite both;display:inline-block;::before{content:'.';}:nth-child(2){animation-delay:0.2s;}:nth-child(3){animation-delay:0.4s;}",
        ],
      },
      "displayName": "ThreeBlinking",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "ThreeBlinking-sc-1k540pu-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
